apps/base/immich/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
        app.kubernetes.io/name: immich
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.0-rc.2
          ports:
            - containerPort: 2283
              name: http-immich
          volumeMounts:
            - name: immich-data
              mountPath: /data
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: 2
              memory: "2Gi"

        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0-rc.2-rocm
          volumeMounts:
            - name: model-cache
              mountPath: /cache
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: 4
              memory: "4Gi"

        - name: redis
          image: docker.io/valkey/valkey:9.1.0@sha256:4963247afc4cd33c7d3b2d2816b9f7f8eeebab148d29056c2ca4d7cbc966f2d9  # yamllint disable-line rule:line-length
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              cpu: 1
              memory: "500Mi"

        - name: postgres
          image: ghcr.io/immich-app/postgres:18-vectorchord0.5.3-pgvector0.8.1
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql
              subPath: immich/postgres
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: 2
              memory: "2Gi"

      volumes:
        - name: immich-data
          persistentVolumeClaim:
            claimName: immich-data-pvc
        - name: postgres-data
          persistentVolumeClaim:
            claimName: immich-postgres-pvc
        - name: model-cache
          emptyDir: {}
